@@ -341,14 +341,20 @@ assert_stat() {
 
 assert_out() {
     msg="$1"; shift
-    assert_compile_success "$1.cb" &&
-    assert_stdout "$msg" "$@" &&
-    assert_compile_success -O "$1.cb" &&
-    assert_stdout "$msg" "$@" &&
-    assert_compile_success -fPIC "$1.cb" &&
-    assert_stdout "$msg" "$@" &&
-    assert_compile_success -O -fPIC "$1.cb" &&
-    assert_stdout "$msg" "$@"
+    if [ -n "$SHUNIT_FAST" ]
+    then
+        assert_compile_success "$1.cb" &&
+        assert_stdout "$msg" "$@"
+    else
+        assert_compile_success "$1.cb" &&
+        assert_stdout "$msg" "$@" &&
+        assert_compile_success -O "$1.cb" &&
+        assert_stdout "$msg" "$@" &&
+        assert_compile_success -fPIC "$1.cb" &&
+        assert_stdout "$msg" "$@" &&
+        assert_compile_success -O -fPIC "$1.cb" &&
+        assert_stdout "$msg" "$@"
+    fi
 }
 
 assert_ok() {
