@@ -1,3 +1,8 @@
+Mon Jun  1 03:55:41 2009  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java (Bin): optimize
+	  more patterns.
+
 Sun May 31 22:32:29 2009  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: refactoring:
